--- a/cl-draw/index.html
+++ b/cl-draw/index.html
@@ -1,8 +1,8 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://inker.github.io/draw/cl" />
+<meta http-equiv="refresh" content="0; url=https://inker.github.io/draw" />
 </head>
 <body>
-The page has been moved <a href="https://inker.github.io/draw/cl">HERE</a>
+The page has been moved <a href="https://inker.github.io/draw">HERE</a>
 </body>
 </html>
