--- a/cl-draw/index.html
+++ b/cl-draw/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://inker.github.io/draw" />
+  <title>Champions League draw simulator</title>
+  <meta http-equiv="refresh" content="0; url=https://inker.github.io/draw" />
 </head>
 <body>
 The page has been moved <a href="https://inker.github.io/draw">HERE</a>
